# litestar_edgedb_api

./: pyproject.toml
dbschema/: default.esdl
ls_crud/: events.py  main.py  models.py  users.py
ls_crud/queries/: __init__.py  create_event.edgeql  create_event_async_edgeql.py  create_user.edgeql  create_user_async_edgeql.py  delete_event.edgeql  delete_event_async_edgeql.py  delete_user.edgeql  delete_user_async_edgeql.py  generaged_async.py  get_event_by_name.edgeql  get_event_by_name_async_edgeql.py  get_events.edgeql  get_events_async_edgeql.py  get_user_by_name.edgeql  get_user_by_name_async_edgeql.py  get_users.edgeql  get_users_async_edgeql.py  update_event.edgeql  update_event_async_edgeql.py  update_user.edgeql  update_user_async_edgeql.py
